Update image sources for Crossnumber and Memo Raise

--- a/index.html
+++ b/index.html
@@ -327,7 +327,7 @@
 			<a href="https://itunes.apple.com/us/app/crossnumber-game/id1457853042" target="_blank">
 				<div class="panel panel-default">
 					<div class="panel-body">
-						<img src="crossnumber2025.png" class="thumbnail" style="width:100%;height:200px;object-fit:cover;">
+						<img src="crossnumber2025UpdatedPhoto.png" class="thumbnail" style="width:100%;height:200px;object-fit:cover;">
 					</div>
 					<div class="panel-footer">
 						<p><strong>Crossnumber: Math Puzzle Game</strong> is an iOS Game</p>
@@ -355,7 +355,7 @@
 			<a href="https://apps.apple.com/us/app/memo-raise-memory-game/id1626138063" target="_blank">
 				<div class="panel panel-default">
 					<div class="panel-body">
-						<img src="memoraise2025.png" class="thumbnail" style="width:100%;height:200px;object-fit:cover;">
+						<img src="memoRaise2025UpdatedPhoto.png" class="thumbnail" style="width:100%;height:200px;object-fit:cover;">
 					</div>
 					<div class="panel-footer">
 						<p><strong>Memo Raise: Memory Game</strong> is an iOS Game</p>
