Update game details and images in index.html

--- a/index.html
+++ b/index.html
@@ -331,7 +331,21 @@
 					</div>
 					<div class="panel-footer">
 						<p><strong>Crossnumber: Math Puzzle Game</strong> is an iOS Game</p>
-						<p>Created using Xcode (Swift/SpriteKit)</p>
+						<p>Created using Xcode (Migrated to SwiftUI)</p>
+					</div>
+				</div>
+			 </a>
+		</div>
+
+		<div class="col-md-6 col-sm-6 col-xs-6 work">
+			<a href="https://apps.apple.com/us/app/memo-raise-memory-game/id1626138063" target="_blank">
+				<div class="panel panel-default">
+					<div class="panel-body">
+						<img src="memoRaise2025UpdatedPhoto.png" class="thumbnail" style="width:100%;height:200px;object-fit:cover;">
+					</div>
+					<div class="panel-footer">
+						<p><strong>Memo Raise: Memory Game</strong> is an iOS Game</p>
+						<p>Created using Xcode (Migrated to SwiftUI)</p>
 					</div>
 				</div>
 			 </a>
@@ -346,20 +360,6 @@
 					<div class="panel-footer">
 						<p><strong>Staedee: App for Study</strong></p>
 						<p>Created using Xcode (SwiftUI)</p>
-					</div>
-				</div>
-			 </a>
-		</div>
-
-		<div class="col-md-6 col-sm-6 col-xs-6 work">
-			<a href="https://apps.apple.com/us/app/memo-raise-memory-game/id1626138063" target="_blank">
-				<div class="panel panel-default">
-					<div class="panel-body">
-						<img src="memoRaise2025UpdatedPhoto.png" class="thumbnail" style="width:100%;height:200px;object-fit:cover;">
-					</div>
-					<div class="panel-footer">
-						<p><strong>Memo Raise: Memory Game</strong> is an iOS Game</p>
-						<p>Created using Xcode (Swift/SpriteKit)</p>
 					</div>
 				</div>
 			 </a>
