move images to folder

--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@
 			</div>
 		</div>
 
-		<a href="RuelCV2025.pdf" target="_blank" class="btn-lg btn btn-info" style="margin-bottom: 30px;">View My Resume</a>	
+		<a href="cv/RuelLafuenteCV.pdf" target="_blank" class="btn-lg btn btn-info" style="margin-bottom: 30px;">View My Resume</a>	
 	</div>
 	
 	<div id="myWorks" class="col-md-12 col-sm-12 panel panel-primary">
@@ -299,7 +299,7 @@
 			<a href="https://apps.apple.com/ph/app/red-planet-hotels/id979816195" target="_blank">
 				<div class="panel panel-default">
 					<div class="panel-body">
-						<img src="redplanet.png" class="thumbnail" style="width:100%;height:200px;object-fit:cover;">
+						<img src="images/redplanet.png" class="thumbnail" style="width:100%;height:200px;object-fit:cover;">
 					</div>
 					<div class="panel-footer">
 						<p><strong>Red Planet Hotels</strong></p>
@@ -313,7 +313,7 @@
 			<a href="https://apps.apple.com/ph/app/autodeal-philippines/id6474729763" target="_blank">
 				<div class="panel panel-default">
 					<div class="panel-body">
-						<img src="autodeal.png" class="thumbnail" style="width:100%;height:200px;object-fit:cover;">
+						<img src="images/autodeal.png" class="thumbnail" style="width:100%;height:200px;object-fit:cover;">
 					</div>
 					<div class="panel-footer">
 						<p><strong>AutoDeal Philippines</strong></p>
@@ -327,7 +327,7 @@
 			<a href="https://itunes.apple.com/us/app/crossnumber-game/id1457853042" target="_blank">
 				<div class="panel panel-default">
 					<div class="panel-body">
-						<img src="crossnumber2025UpdatedPhoto.png" class="thumbnail" style="width:100%;height:200px;object-fit:cover;">
+						<img src="images/crossnumber2025UpdatedPhoto.png" class="thumbnail" style="width:100%;height:200px;object-fit:cover;">
 					</div>
 					<div class="panel-footer">
 						<p><strong>Crossnumber: Math Puzzle Game</strong> is an iOS Game</p>
@@ -341,7 +341,7 @@
 			<a href="https://apps.apple.com/us/app/memo-raise-memory-game/id1626138063" target="_blank">
 				<div class="panel panel-default">
 					<div class="panel-body">
-						<img src="memoRaise2025UpdatedPhoto.png" class="thumbnail" style="width:100%;height:200px;object-fit:cover;">
+						<img src="images/memoRaise2025UpdatedPhoto.png" class="thumbnail" style="width:100%;height:200px;object-fit:cover;">
 					</div>
 					<div class="panel-footer">
 						<p><strong>Memo Raise: Memory Game</strong> is an iOS Game</p>
@@ -355,7 +355,7 @@
 			<a href="https://apps.apple.com/us/app/staedee-app-for-study/id6738093980" target="_blank">
 				<div class="panel panel-default">
 					<div class="panel-body">
-						<img src="staedee1.png" class="thumbnail" style="width:100%;height:200px;object-fit:cover;">
+						<img src="images/staedee1.png" class="thumbnail" style="width:100%;height:200px;object-fit:cover;">
 					</div>
 					<div class="panel-footer">
 						<p><strong>Staedee: App for Study</strong></p>
@@ -369,7 +369,7 @@
 			<a href="https://apps.apple.com/us/app/backward-word-game/id1436319652" target="_blank">
 				<div class="panel panel-default">
 					<div class="panel-body">
-						<img src="backward2025.png" class="thumbnail" style="width:100%;height:200px;object-fit:cover;">
+						<img src="images/backward2025.png" class="thumbnail" style="width:100%;height:200px;object-fit:cover;">
 					</div>
 					<div class="panel-footer">
 						<p><strong>Backward: Word Game</strong> is an iOS Game</p>
@@ -383,7 +383,7 @@
 			<a href="https://apps.apple.com/us/app/test-my-brain-quiz-game/id1520657502" target="_blank">
 				<div class="panel panel-default">
 					<div class="panel-body">
-						<img src="testmybrain2025.png" class="thumbnail" style="width:100%;height:200px;object-fit:cover;">
+						<img src="images/testmybrain2025.png" class="thumbnail" style="width:100%;height:200px;object-fit:cover;">
 					</div>
 					<div class="panel-footer">
 						<p><strong>Test My Brain: Quiz Game</strong> is an iOS Game</p>
@@ -397,7 +397,7 @@
 			<a href="https://apps.apple.com/us/app/close-chat-offline-messenger/id1568510686" target="_blank">
 				<div class="panel panel-default">
 					<div class="panel-body">
-						<img src="closechat2025.png" class="thumbnail" style="width:100%;height:200px;object-fit:cover;">
+						<img src="images/closechat2025.png" class="thumbnail" style="width:100%;height:200px;object-fit:cover;">
 					</div>
 					<div class="panel-footer">
 						<p><strong>Close Chat: Offline Messenger</strong> </p>
@@ -411,7 +411,7 @@
 			<a href="https://apps.apple.com/ph/app/color-escape-game/id1487990289" target="_blank">
 				<div class="panel panel-default">
 					<div class="panel-body">
-						<img src="coloescape2025.png" class="thumbnail" style="width:100%;height:200px;object-fit:cover;">
+						<img src="images/coloescape2025.png" class="thumbnail" style="width:100%;height:200px;object-fit:cover;">
 					</div>
 					<div class="panel-footer">
 						<p><strong>Color Escape Game</strong> is an iOS Game</p>
@@ -425,7 +425,7 @@
 			<a href="https://bgbridalgallery.com/ph" target="_blank">
 				<div class="panel panel-default">
 					<div class="panel-body">
-						<img src="bgph.png" class="thumbnail" style="width:100%;height:200px;object-fit:cover;">
+						<img src="images/bgph.png" class="thumbnail" style="width:100%;height:200px;object-fit:cover;">
 					</div>
 					<div class="panel-footer">
 					<p><strong>BG Bridal Gallery PH</strong> is a wedding site</p>
@@ -439,7 +439,7 @@
 			<a href="https://bgbridalgallery.com/us" target="_blank">
 				<div class="panel panel-default">
 					<div class="panel-body">
-						<img src="bgus.png" class="thumbnail" style="width:100%;height:200px;object-fit:cover;">
+						<img src="images/bgus.png" class="thumbnail" style="width:100%;height:200px;object-fit:cover;">
 					</div>
 					<div class="panel-footer">
 					<p><strong>BG Bridal Gallery US</strong> is a wedding site</p>
@@ -453,7 +453,7 @@
 			<a href="https://bgbridalgallery.com/jp" target="_blank">
 				<div class="panel panel-default">
 					<div class="panel-body">
-						<img src="bgjp.png" class="thumbnail" style="width:100%;height:200px;object-fit:cover;">
+						<img src="images/bgjp.png" class="thumbnail" style="width:100%;height:200px;object-fit:cover;">
 					</div>
 					<div class="panel-footer">
 					<p><strong>BG Bridal Gallery JP</strong> is a wedding site</p>
@@ -467,7 +467,7 @@
 			<a href="https://gamenewsninja.com/" target="_blank">
 				<div class="panel panel-default">
 					<div class="panel-body">
-						<img src="gnn.png" class="thumbnail" style="width:100%;height:200px;object-fit:cover;">
+						<img src="images/gnn.png" class="thumbnail" style="width:100%;height:200px;object-fit:cover;">
 					</div>
 					<div class="panel-footer">
 					<p><strong>Game News Ninja</strong></p>
@@ -481,7 +481,7 @@
 			<a href="https://chamoji.com" target="_blank">
 				<div class="panel panel-default">
 					<div class="panel-body">
-						<img src="chamoji.png" class="thumbnail" style="width:100%;height:200px;object-fit:cover;">
+						<img src="images/chamoji.png" class="thumbnail" style="width:100%;height:200px;object-fit:cover;">
 					</div>
 					<div class="panel-footer">
 					<p><strong>Chamoji</strong></p>
